removed compiler/spotbugs/surefire/hpi/source/javadoc